# Nexion

./: .gitignore  Cargo.toml  Readme.md
nexion/: Cargo.toml
nexion/src/: lib.rs  nexion.slang
nexion/src/backend/: device.rs  gpu_resources.rs  instance.rs  pipelines.rs  swapchain.rs
nexion/src/core/: commands.rs  device.rs  gpu_resources.rs  instance.rs  mod.rs  pipelines.rs  swapchain.rs
nexion/src/definations/: commands.rs  core.rs  gpu_resources.rs  pipelines.rs
nexion/src/utils/: mod.rs  texture.rs  vulkan_context.rs
nexion_examples/fractal/: Cargo.toml
nexion_examples/fractal/shaders/: fragment.slang  vertex.slang
nexion_examples/fractal/src/: camera.rs  main.rs  renderer.rs
nexion_examples/triangle/: Cargo.toml
nexion_examples/triangle/shaders/: fragment_shader.slang  nexion.slang  vertex_shader.slang
nexion_examples/triangle/src/: main.rs
