[package]
name = "nexion"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "vulkan"]
description = "A high performance vulkan abstraction layer"
readme = "../Readme.md"
repository = "https://github.com/pingpong74/Nexion"

[lib]
path = "src/lib.rs"

[dependencies]
ash                 = { version = "0.38.0", features = ["linked"] }
gpu-allocator       = "0.28.0"
delegate            = "0.13.2"
raw-window-handle   = "0.6.2"
memoffset           = "0.9.1"
smallvec            = "1.13.2"
serde               = { version = "1.0.215", features = ["derive"] }
serde_json          = "1.0.132"
